Changed names for items and removed pointless items.

--- a/src/main/resources/assets/runes_arcana/lang/en_us.json
+++ b/src/main/resources/assets/runes_arcana/lang/en_us.json
@@ -1,24 +1,11 @@
 {
 "item.runes_arcana.blank_rune": "Blank Rune",
-  "item.runes_arcana.rune_of_fire": "Rune of Fire",
-  "item.runes_arcana.rune_of_air": "Rune of Air",
-  "item.runes_arcana.rune_of_earth": "Rune of Earth",
-  "item.runes_arcana.rune_of_water": "Rune of Water",
-  "item.runes_arcana.rune_of_electricity": "Rune of Electricity",
+  "item.runes_arcana.fire_rune": "Fire Rune",
+  "item.runes_arcana.air_rune": "Air Rune",
+  "item.runes_arcana.earth_rune": "Earth Rune",
+  "item.runes_arcana.water_rune": "Water Rune",
+  "item.runes_arcana.energy_rune": "Energy Rune",
 
-  "item.runes_arcana.rune_of_speed": "Rune of Speed",
-  "item.runes_arcana.rune_of_vigor": "Rune of Vigor",
-  "item.runes_arcana.rune_of_the_noctournals": "Rune of the Noctournals",
-  "item.runes_arcana.rune_of_destruction": "Rune of Destruction",
-  "item.runes_arcana.rune_of_creation": "Rune of Creation",
-  "item.runes_arcana.rune_of_leaping": "Rune of Leaping",
-  "item.runes_arcana.rune_of_wings": "Rune of Wings",
-  "item.runes_arcana.rune_of_levitation": "Rune of Levitation",
-  "item.runes_arcana.rune_of_frost": "Rune of Frost",
-  "item.runes_arcana.rune_of_frozen_time": "Rune of Frozen Time",
-  "item.runes_arcana.rune_of_swift_mining": "Rune of Swift Mining",
-  "item.runes_arcana.rune_of_healing": "Rune of Healing",
-  "item.runes_arcana.rune_of_mining": "Rune of Mining",
 
   "block.runes_arcana.block_of_blank_runes": "Block of Blank Runes",
   "block.runes_arcana.runic_ore": "Runic Ore",
