Added to en-us.json

--- a/src/main/resources/assets/runes_arcana/lang/en_us.json
+++ b/src/main/resources/assets/runes_arcana/lang/en_us.json
@@ -5,6 +5,7 @@
   "item.runes_arcana.earth_rune": "Earth Rune",
   "item.runes_arcana.water_rune": "Water Rune",
   "item.runes_arcana.energy_rune": "Energy Rune",
+  "item.runes_aracana.die_of_fate": "Die Of Fate",
 
 
   "block.runes_arcana.block_of_blank_runes": "Block of Blank Runes",
